// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`message.sender_id === message.user_id 1`] = `
<div
  className="flex-100 layout-row message_wrapper"
>
  <div
    className="flex-25"
  />
  <styled.div
    className="flex-none layout-row layout-align-start-center layout-wrap user_style message_inner"
  >
    <div
      className="flex-100 layout-row layout-align-space-between-center"
    >
      <h3
        className="flex-none message_title"
      >
        TITLE
      </h3>
      <p
        className="flex-none timestamp"
      >
        TENANT_NAME
         
        Admin
         @ 
        Dec 1, 2018 7:14 PM
      </p>
    </div>
    <div
      className="flex-100 layout-row layout-align-start-center"
    >
      <p
        className="flex-none message_text"
      >
        MESSAGE
      </p>
    </div>
  </styled.div>
</div>
`;

exports[`shallow rendering 1`] = `
<div
  className="flex-100 layout-row message_wrapper"
>
  <div
    className="flex-5"
  />
  <styled.div
    className="flex-none layout-row layout-align-start-center layout-wrap tenant_style message_inner"
  >
    <div
      className="flex-100 layout-row layout-align-space-between-center"
    >
      <h3
        className="flex-none message_title"
      >
        TITLE
      </h3>
      <p
        className="flex-none timestamp"
      >
        TENANT_NAME
         
        Admin
         @ 
        Dec 1, 2018 7:14 PM
      </p>
    </div>
    <div
      className="flex-100 layout-row layout-align-start-center"
    >
      <p
        className="flex-none message_text"
      >
        MESSAGE
      </p>
    </div>
  </styled.div>
</div>
`;
